--- a/org/clojure.html
+++ b/org/clojure.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="sr" xml:lang="sr">
 <head>
-<!-- 2017-04-09 нед 23:36 -->
+<!-- 2017-04-11 уто 16:49 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Napredne tehnike programiranja - Clojure</title>
@@ -266,53 +266,57 @@ for the JavaScript code in this tag.
 <h2>Sadr&#382;aj</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#org42123ae">1. Uvod</a>
+<li><a href="#org8f11e42">1. Uvod</a>
 <ul>
-<li><a href="#org22d0a1e">1.1. Lisp</a>
+<li><a href="#orgd796297">1.1. Lisp</a>
 <ul>
-<li><a href="#org428c1b8">1.1.1. Scheme</a></li>
+<li><a href="#orgd8b7fe6">1.1.1. Scheme</a></li>
 </ul>
 </li>
-<li><a href="#org88e433e">1.2. Clojure - funkcionalni način razmišljanja</a></li>
-<li><a href="#org6188fc0">1.3. Imperativno vs funckionalno programiranje</a></li>
-<li><a href="#org1f6131c">1.4. Clojure kao <i>value oriented</i> jezik</a></li>
-<li><a href="#org47e4ac6">1.5. Referencijalna transparentnost i memoizacija</a></li>
-<li><a href="#org5c986dd">1.6. Misliti rekurzivno</a></li>
+<li><a href="#orgf31c0dc">1.2. Clojure - funkcionalni način razmišljanja</a></li>
+<li><a href="#org804b970">1.3. Imperativno vs funckionalno programiranje</a></li>
+<li><a href="#orgdce3699">1.4. Clojure kao <i>value oriented</i> jezik</a></li>
+<li><a href="#org5f48858">1.5. Referencijalna transparentnost i memoizacija</a></li>
+<li><a href="#org856ffcc">1.6. Misliti rekurzivno</a></li>
 </ul>
 </li>
-<li><a href="#org4de3f26">2. REPL i IDE</a></li>
-<li><a href="#org2d7cdaa">3. Elementi jezika</a>
+<li><a href="#org779cc2f">2. REPL i IDE</a></li>
+<li><a href="#org6fe2003">3. Elementi jezika</a>
 <ul>
-<li><a href="#org79eb0bb">3.1. Vežbanje 1</a></li>
-<li><a href="#org95b44d0">3.2. Funkcije višeg reda</a></li>
-<li><a href="#org7fc247b">3.3. Clojure u standardnim OO problemima</a></li>
-<li><a href="#org6095dc4">3.4. Perzistentne strukture podataka</a></li>
-</ul>
-</li>
-<li><a href="#org5bf5b71">4. Read, evaluate vrtlog i makroi</a>
+<li><a href="#org5f5ba59">3.1. Vežbanje 1</a></li>
+<li><a href="#org86a21a3">3.2. Funkcije višeg reda</a>
 <ul>
-<li><a href="#orga9178b7">4.1. <i>Homoiconicy</i> &#x2014; "istoizglednost"</a></li>
+<li><a href="#org3452111">3.2.1. Parcijalne funkcije</a></li>
 </ul>
 </li>
-<li><a href="#org37b02bb">5. Konkurentno i paralelno programiranje</a>
+<li><a href="#org60648ed">3.3. Clojure u standardnim OO problemima</a></li>
+<li><a href="#orgf11e419">3.4. Perzistentne strukture podataka</a></li>
+</ul>
+</li>
+<li><a href="#org643ba53">4. Read, evaluate vrtlog i makroi</a>
 <ul>
-<li><a href="#org996db2c">5.1. Reference</a></li>
-<li><a href="#org85b6dce">5.2. core.async</a></li>
+<li><a href="#org00ec3d4">4.1. <i>Homoiconicy</i> &#x2014; "istoizglednost"</a></li>
 </ul>
 </li>
-<li><a href="#org740354b">6. Interakcija sa platformom</a></li>
-<li><a href="#orgae2ea32">7. Apstrakcije</a>
+<li><a href="#orgf64a5fc">5. Konkurentno i paralelno programiranje</a>
 <ul>
-<li><a href="#org6e24adc">7.1. Multimethods</a></li>
-<li><a href="#orgb0e62a0">7.2. Protocols</a></li>
-<li><a href="#orgaa59712">7.3. Records</a></li>
-<li><a href="#org5e3b1ec">7.4. clojure.spec</a></li>
+<li><a href="#org1edb44e">5.1. Reference</a></li>
+<li><a href="#orgdb7db65">5.2. core.async</a></li>
 </ul>
 </li>
-<li><a href="#org0346dfd">8. ClojureScript</a></li>
-<li><a href="#org70c6c86">9. Reader conditionals (.cljc)</a></li>
-<li><a href="#org55508ae">10. ClojureCLR</a></li>
-<li><a href="#org754b6e6">11. Literatura</a></li>
+<li><a href="#orgd43cf51">6. Interakcija sa platformom</a></li>
+<li><a href="#orgcec3e46">7. Apstrakcije</a>
+<ul>
+<li><a href="#org2b4b4a2">7.1. Multimethods</a></li>
+<li><a href="#orga7d784e">7.2. Protocols</a></li>
+<li><a href="#orga4f55a6">7.3. Records</a></li>
+<li><a href="#org4255536">7.4. clojure.spec</a></li>
+</ul>
+</li>
+<li><a href="#org07a79ec">8. ClojureScript</a></li>
+<li><a href="#org0982bbe">9. Reader conditionals (.cljc)</a></li>
+<li><a href="#org17dba8e">10. ClojureCLR</a></li>
+<li><a href="#org91e857e">11. Literatura</a></li>
 </ul>
 </div>
 </div>
@@ -348,8 +352,8 @@ system that ensure clean, correct, multithreaded designs.
 </p>
 </blockquote>
 
-<div id="outline-container-org42123ae" class="outline-2">
-<h2 id="org42123ae"><span class="section-number-2">1</span> Uvod</h2>
+<div id="outline-container-org8f11e42" class="outline-2">
+<h2 id="org8f11e42"><span class="section-number-2">1</span> Uvod</h2>
 <div class="outline-text-2" id="text-1">
 <blockquote>
 <p>
@@ -364,8 +368,8 @@ in the expert's mind there are few.
 </blockquote>
 </div>
 
-<div id="outline-container-org22d0a1e" class="outline-3">
-<h3 id="org22d0a1e"><span class="section-number-3">1.1</span> Lisp</h3>
+<div id="outline-container-orgd796297" class="outline-3">
+<h3 id="orgd796297"><span class="section-number-3">1.1</span> Lisp</h3>
 <div class="outline-text-3" id="text-1-1">
 <p>
 <b>Lisp</b> ili <b>LISP</b> je porodica programskih jezika sa dugom
@@ -430,8 +434,8 @@ još pregršt drugih dijalekata sa raznim osobinama:
 </ul>
 </div>
 
-<div id="outline-container-org428c1b8" class="outline-4">
-<h4 id="org428c1b8"><span class="section-number-4">1.1.1</span> Scheme</h4>
+<div id="outline-container-orgd8b7fe6" class="outline-4">
+<h4 id="orgd8b7fe6"><span class="section-number-4">1.1.1</span> Scheme</h4>
 <div class="outline-text-4" id="text-1-1-1">
 <p>
 <b>Scheme</b> je jedan od najznačajnijih dijalekata Lisp-a. Dizajniran
@@ -454,7 +458,7 @@ samo dva.
 </p>
 </div>
 
-<ol class="org-ol"><li><a id="org4712bf9"></a>Chez Scheme (Cisco)<br /><div class="outline-text-5" id="text-1-1-1-1">
+<ol class="org-ol"><li><a id="org7086d49"></a>Chez Scheme (Cisco)<br /><div class="outline-text-5" id="text-1-1-1-1">
 <p>
 <a href="https://github.com/cisco/ChezScheme"><b>Chez</b></a> je <a href="http://www.r6rs.org/">Scheme implementacija</a> zajedno sa (moćnim) kompajlerom,
 <i>run time</i> sistemom i bibliotekama. Koristi je kompanije Cisco a
@@ -469,7 +473,7 @@ C biblioteka onda nije loše da počnete sa <b>Chez</b>-om.
 </p>
 </div></li>
 
-<li><a id="org19d56f8"></a>Racket lang<br /><div class="outline-text-5" id="text-1-1-1-2">
+<li><a id="orgdcd74f8"></a>Racket lang<br /><div class="outline-text-5" id="text-1-1-1-2">
 <p>
 <a href="https://racket-lang.org/">Racket lang</a> je takođe implementacija Schema-a ali sa potpuno
 drugim ciljevima pri dizajnu. Racket je po svom dizajnu sistem za
@@ -487,8 +491,8 @@ odlično društvo od kojeg možete mnogo da naučite.
 </div>
 </div>
 
-<div id="outline-container-org88e433e" class="outline-3">
-<h3 id="org88e433e"><span class="section-number-3">1.2</span> Clojure - funkcionalni način razmišljanja</h3>
+<div id="outline-container-orgf31c0dc" class="outline-3">
+<h3 id="orgf31c0dc"><span class="section-number-3">1.2</span> Clojure - funkcionalni način razmišljanja</h3>
 <div class="outline-text-3" id="text-1-2">
 <p>
 Danas postoji mnogo programskih jezika i zaista se (pre)veliki deo
@@ -527,8 +531,8 @@ koja Vam ne dozvoljava da pišete kod onako kako ste navikli!</i>
 </div>
 </div>
 
-<div id="outline-container-org6188fc0" class="outline-3">
-<h3 id="org6188fc0"><span class="section-number-3">1.3</span> Imperativno vs funckionalno programiranje</h3>
+<div id="outline-container-org804b970" class="outline-3">
+<h3 id="org804b970"><span class="section-number-3">1.3</span> Imperativno vs funckionalno programiranje</h3>
 <div class="outline-text-3" id="text-1-3">
 <p>
 C, C++, C#, Java, Python svi ovi (i drugi) programski jezici imaju
@@ -595,8 +599,8 @@ veoma prostom. <i>Uviđanje ove jednostavnosti dolazi uz malo vežbe.</i>
 </div>
 </div>
 
-<div id="outline-container-org1f6131c" class="outline-3">
-<h3 id="org1f6131c"><span class="section-number-3">1.4</span> Clojure kao <i>value oriented</i> jezik</h3>
+<div id="outline-container-orgdce3699" class="outline-3">
+<h3 id="orgdce3699"><span class="section-number-3">1.4</span> Clojure kao <i>value oriented</i> jezik</h3>
 <div class="outline-text-3" id="text-1-4">
 <p>
 Clojure promoviše stil programiranja koji se zove <i>value-oriented
@@ -638,8 +642,8 @@ primera koji to ilustruje:
 </div>
 </div>
 
-<div id="outline-container-org47e4ac6" class="outline-3">
-<h3 id="org47e4ac6"><span class="section-number-3">1.5</span> Referencijalna transparentnost i memoizacija</h3>
+<div id="outline-container-org5f48858" class="outline-3">
+<h3 id="org5f48858"><span class="section-number-3">1.5</span> Referencijalna transparentnost i memoizacija</h3>
 <div class="outline-text-3" id="text-1-5">
 <p>
 Funkcije za koje uvek po njihovim parametrima možete da kažete sa
@@ -705,11 +709,11 @@ njena obična verzija ali se svaki sledeći put kada bude pozvana
 </div>
 </div>
 
-<div id="outline-container-org5c986dd" class="outline-3">
-<h3 id="org5c986dd"><span class="section-number-3">1.6</span> Misliti rekurzivno</h3>
+<div id="outline-container-org856ffcc" class="outline-3">
+<h3 id="org856ffcc"><span class="section-number-3">1.6</span> Misliti rekurzivno</h3>
 <div class="outline-text-3" id="text-1-6">
 <p>
-Iz razloga koji su opisani <a href="#org6188fc0">ranije</a> imperativni programski jezici ne
+Iz razloga koji su opisani <a href="#org804b970">ranije</a> imperativni programski jezici ne
 stavljaju previše akcenat na rekurziju. Funcionalno programiranje
 rekurziju koristi kao osnovni alat. Tamo gde imperativno
 programiranje koristi petlje funkcionalno programiranje koristi
@@ -755,7 +759,7 @@ Imperativno programiranje problem faktorijela posmatra ovako:
 </div>
 
 <p>
-Clojure kao funkcionalan <a href="#org1f6131c">value oriented</a> jezik ne podržava mutiranje
+Clojure kao funkcionalan <a href="#orgdce3699">value oriented</a> jezik ne podržava mutiranje
 pa tako:
 </p>
 
@@ -873,6 +877,7 @@ na steku. Funkcija se izvršava ovako:
 <span style="color: #DCDCCC;">(</span><span style="color: #F0DFAF; font-weight: bold;">loop</span> 3 120<span style="color: #DCDCCC;">)</span>
 <span style="color: #DCDCCC;">(</span><span style="color: #F0DFAF; font-weight: bold;">loop</span> 2 360<span style="color: #DCDCCC;">)</span>
 <span style="color: #DCDCCC;">(</span><span style="color: #F0DFAF; font-weight: bold;">loop</span> 1 720<span style="color: #DCDCCC;">)</span>
+<span style="color: #DCDCCC;">(</span><span style="color: #F0DFAF; font-weight: bold;">loop</span> 0 720<span style="color: #DCDCCC;">)</span>
 720
 </pre>
 </div>
@@ -993,11 +998,11 @@ alokacija steka</b>.
 </div>
 </div>
 
-<div id="outline-container-org4de3f26" class="outline-2">
-<h2 id="org4de3f26"><span class="section-number-2">2</span> REPL i IDE</h2>
+<div id="outline-container-org779cc2f" class="outline-2">
+<h2 id="org779cc2f"><span class="section-number-2">2</span> REPL i IDE</h2>
 </div>
-<div id="outline-container-org2d7cdaa" class="outline-2">
-<h2 id="org2d7cdaa"><span class="section-number-2">3</span> Elementi jezika</h2>
+<div id="outline-container-org6fe2003" class="outline-2">
+<h2 id="org6fe2003"><span class="section-number-2">3</span> Elementi jezika</h2>
 <div class="outline-text-2" id="text-3">
 <p>
 Ovaj kurs nema deo posvećen upoznavanju sa bazičnim elementima
@@ -1018,8 +1023,8 @@ objašnjenjem)</li>
 </ol>
 </div>
 
-<div id="outline-container-org79eb0bb" class="outline-3">
-<h3 id="org79eb0bb"><span class="section-number-3">3.1</span> Vežbanje 1</h3>
+<div id="outline-container-org5f5ba59" class="outline-3">
+<h3 id="org5f5ba59"><span class="section-number-3">3.1</span> Vežbanje 1</h3>
 <div class="outline-text-3" id="text-3-1">
 <p>
 Ideje zadataka uglavnom preuzete sa <a href="https://www.4clojure.com">4Clojure</a>.
@@ -1037,8 +1042,8 @@ svakog <code>n</code>-tog elementa.</li>
 </div>
 </div>
 
-<div id="outline-container-org95b44d0" class="outline-3">
-<h3 id="org95b44d0"><span class="section-number-3">3.2</span> Funkcije višeg reda</h3>
+<div id="outline-container-org86a21a3" class="outline-3">
+<h3 id="org86a21a3"><span class="section-number-3">3.2</span> Funkcije višeg reda</h3>
 <div class="outline-text-3" id="text-3-2">
 <p>
 <a href="https://en.wikipedia.org/wiki/Higher-order_function">Funkcije višeg</a> reda su funkcije koje primaju funkcije kao parametre
@@ -1128,21 +1133,24 @@ reda. Najbolji način da uvidite koliko su funkcije višeg reda
 prirodne za Clojure je da ih probate u npr. Javi.
 </p>
 </div>
+
+<div id="outline-container-org3452111" class="outline-4">
+<h4 id="org3452111"><span class="section-number-4">3.2.1</span> Parcijalne funkcije</h4>
+</div>
+</div>
+<div id="outline-container-org60648ed" class="outline-3">
+<h3 id="org60648ed"><span class="section-number-3">3.3</span> Clojure u standardnim OO problemima</h3>
+</div>
+<div id="outline-container-orgf11e419" class="outline-3">
+<h3 id="orgf11e419"><span class="section-number-3">3.4</span> Perzistentne strukture podataka</h3>
+</div>
 </div>
 
-<div id="outline-container-org7fc247b" class="outline-3">
-<h3 id="org7fc247b"><span class="section-number-3">3.3</span> Clojure u standardnim OO problemima</h3>
-</div>
-<div id="outline-container-org6095dc4" class="outline-3">
-<h3 id="org6095dc4"><span class="section-number-3">3.4</span> Perzistentne strukture podataka</h3>
-</div>
-</div>
-
-<div id="outline-container-org5bf5b71" class="outline-2">
-<h2 id="org5bf5b71"><span class="section-number-2">4</span> Read, evaluate vrtlog i makroi</h2>
+<div id="outline-container-org643ba53" class="outline-2">
+<h2 id="org643ba53"><span class="section-number-2">4</span> Read, evaluate vrtlog i makroi</h2>
 <div class="outline-text-2" id="text-4">
-</div><div id="outline-container-orga9178b7" class="outline-3">
-<h3 id="orga9178b7"><span class="section-number-3">4.1</span> <i>Homoiconicy</i> &#x2014; "istoizglednost"</h3>
+</div><div id="outline-container-org00ec3d4" class="outline-3">
+<h3 id="org00ec3d4"><span class="section-number-3">4.1</span> <i>Homoiconicy</i> &#x2014; "istoizglednost"</h3>
 <div class="outline-text-3" id="text-4-1">
 
 <div class="figure">
@@ -1168,56 +1176,56 @@ zamišljamo.
 </div>
 </div>
 
-<div id="outline-container-org37b02bb" class="outline-2">
-<h2 id="org37b02bb"><span class="section-number-2">5</span> Konkurentno i paralelno programiranje</h2>
+<div id="outline-container-orgf64a5fc" class="outline-2">
+<h2 id="orgf64a5fc"><span class="section-number-2">5</span> Konkurentno i paralelno programiranje</h2>
 <div class="outline-text-2" id="text-5">
-</div><div id="outline-container-org996db2c" class="outline-3">
-<h3 id="org996db2c"><span class="section-number-3">5.1</span> Reference</h3>
+</div><div id="outline-container-org1edb44e" class="outline-3">
+<h3 id="org1edb44e"><span class="section-number-3">5.1</span> Reference</h3>
 </div>
 
-<div id="outline-container-org85b6dce" class="outline-3">
-<h3 id="org85b6dce"><span class="section-number-3">5.2</span> core.async</h3>
+<div id="outline-container-orgdb7db65" class="outline-3">
+<h3 id="orgdb7db65"><span class="section-number-3">5.2</span> core.async</h3>
 </div>
 </div>
 
-<div id="outline-container-org740354b" class="outline-2">
-<h2 id="org740354b"><span class="section-number-2">6</span> Interakcija sa platformom</h2>
+<div id="outline-container-orgd43cf51" class="outline-2">
+<h2 id="orgd43cf51"><span class="section-number-2">6</span> Interakcija sa platformom</h2>
 </div>
 
-<div id="outline-container-orgae2ea32" class="outline-2">
-<h2 id="orgae2ea32"><span class="section-number-2">7</span> Apstrakcije</h2>
+<div id="outline-container-orgcec3e46" class="outline-2">
+<h2 id="orgcec3e46"><span class="section-number-2">7</span> Apstrakcije</h2>
 <div class="outline-text-2" id="text-7">
-</div><div id="outline-container-org6e24adc" class="outline-3">
-<h3 id="org6e24adc"><span class="section-number-3">7.1</span> Multimethods</h3>
+</div><div id="outline-container-org2b4b4a2" class="outline-3">
+<h3 id="org2b4b4a2"><span class="section-number-3">7.1</span> Multimethods</h3>
 </div>
 
-<div id="outline-container-orgb0e62a0" class="outline-3">
-<h3 id="orgb0e62a0"><span class="section-number-3">7.2</span> Protocols</h3>
+<div id="outline-container-orga7d784e" class="outline-3">
+<h3 id="orga7d784e"><span class="section-number-3">7.2</span> Protocols</h3>
 </div>
 
-<div id="outline-container-orgaa59712" class="outline-3">
-<h3 id="orgaa59712"><span class="section-number-3">7.3</span> Records</h3>
+<div id="outline-container-orga4f55a6" class="outline-3">
+<h3 id="orga4f55a6"><span class="section-number-3">7.3</span> Records</h3>
 </div>
 
-<div id="outline-container-org5e3b1ec" class="outline-3">
-<h3 id="org5e3b1ec"><span class="section-number-3">7.4</span> clojure.spec</h3>
+<div id="outline-container-org4255536" class="outline-3">
+<h3 id="org4255536"><span class="section-number-3">7.4</span> clojure.spec</h3>
 </div>
 </div>
 
-<div id="outline-container-org0346dfd" class="outline-2">
-<h2 id="org0346dfd"><span class="section-number-2">8</span> ClojureScript</h2>
+<div id="outline-container-org07a79ec" class="outline-2">
+<h2 id="org07a79ec"><span class="section-number-2">8</span> ClojureScript</h2>
 </div>
 
-<div id="outline-container-org70c6c86" class="outline-2">
-<h2 id="org70c6c86"><span class="section-number-2">9</span> Reader conditionals (.cljc)</h2>
+<div id="outline-container-org0982bbe" class="outline-2">
+<h2 id="org0982bbe"><span class="section-number-2">9</span> Reader conditionals (.cljc)</h2>
 </div>
 
-<div id="outline-container-org55508ae" class="outline-2">
-<h2 id="org55508ae"><span class="section-number-2">10</span> ClojureCLR</h2>
+<div id="outline-container-org17dba8e" class="outline-2">
+<h2 id="org17dba8e"><span class="section-number-2">10</span> ClojureCLR</h2>
 </div>
 
-<div id="outline-container-org754b6e6" class="outline-2">
-<h2 id="org754b6e6"><span class="section-number-2">11</span> Literatura</h2>
+<div id="outline-container-org91e857e" class="outline-2">
+<h2 id="org91e857e"><span class="section-number-2">11</span> Literatura</h2>
 <div class="outline-text-2" id="text-11">
 <ul class="org-ul">
 <li><a href="http://www.braveclojure.com/">Clojure For The Brave and True</a> &#x2014; Daniel Higginbotham</li>
@@ -1232,7 +1240,7 @@ Abelson, Gerald Jay Sussman with Julie Sussman (sa video
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: Novak Boškov</p>
-<p class="date">Created: 2017-04-09 нед 23:36</p>
+<p class="date">Created: 2017-04-11 уто 16:49</p>
 <p class="validation"></p>
 </div>
 </body>
