--- a/org/colloquium/pharo.html
+++ b/org/colloquium/pharo.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="sr" xml:lang="sr">
 <head>
-<!-- 2017-06-19 пон 12:17 -->
+<!-- 2017-06-19 пон 14:03 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Napredne tehnike programiranja - kolokvijumi Pharo</title>
@@ -244,22 +244,22 @@ for the JavaScript code in this tag.
 <h2>Sadr&#382;aj</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#org3f3905c">1. Maj 2017.</a>
+<li><a href="#org3b2c157">1. Maj 2017.</a>
 <ul>
-<li><a href="#orgfc776b8">1.1. <i>Carimbo</i></a>
+<li><a href="#org63640f9">1.1. <i>Carimbo</i></a>
 <ul>
-<li><a href="#org7053112">1.1.1. Šta su blokovi u Pharo-u? Dajte jedan primer bloka.</a></li>
-<li><a href="#org1007e20">1.1.2. Da li je kompozicija poruka u Pharo-u desno asocijativna? Dati jedan primer.</a></li>
-<li><a href="#org7d50c77">1.1.3. Napište kod koji učitava sliku sa desktopa u Morph prozor (<i>window</i>).</a></li>
-<li><a href="#orgded1c52">1.1.4. Napisati kod koji u nizu (<i>array</i>) pronalazi parne brojeve i štampa ih u Transkript, svaki u novi red.</a></li>
+<li><a href="#orge84ecdd">1.1.1. Šta su blokovi u Pharo-u? Dajte jedan primer bloka.</a></li>
+<li><a href="#orge27a877">1.1.2. Da li je kompozicija poruka u Pharo-u desno asocijativna? Dati jedan primer.</a></li>
+<li><a href="#org564451a">1.1.3. Napište kod koji učitava sliku sa desktopa u Morph prozor (<i>window</i>).</a></li>
+<li><a href="#orgc4f794f">1.1.4. Napisati kod koji u nizu (<i>array</i>) pronalazi parne brojeve i štampa ih u Transkript, svaki u novi red.</a></li>
 </ul>
 </li>
-<li><a href="#org86069d0">1.2. <i>Sabar</i></a>
+<li><a href="#orge8dfa17">1.2. <i>Sabar</i></a>
 <ul>
-<li><a href="#org2b28654">1.2.1. Šta su metode a šta poruke u Smalltalku? Kako se vrši kreiranje objekata? Dati jedan primer.</a></li>
-<li><a href="#org265f2fc">1.2.2. Šta je kaskada (<i>cascade</i>) u Pharo-u? Dati jedan primer.</a></li>
-<li><a href="#org4a524e0">1.2.3. Napisati Pharo blok koji prima putanju do slike sa lokalnog sistema i otvara tu sliku u svetu(<i>world</i>).</a></li>
-<li><a href="#orge65db38">1.2.4. Napisati kod koji:</a></li>
+<li><a href="#orgfdb72ae">1.2.1. Šta su metode a šta poruke u Smalltalku? Kako se vrši kreiranje objekata? Dati jedan primer.</a></li>
+<li><a href="#orga0f3292">1.2.2. Šta je kaskada (<i>cascade</i>) u Pharo-u? Dati jedan primer.</a></li>
+<li><a href="#orgc6c867d">1.2.3. Napisati Pharo blok koji prima putanju do slike sa lokalnog sistema i otvara tu sliku u svetu(<i>world</i>).</a></li>
+<li><a href="#orga6bd62f">1.2.4. Napisati kod koji:</a></li>
 </ul>
 </li>
 </ul>
@@ -268,14 +268,14 @@ for the JavaScript code in this tag.
 </div>
 </div>
 
-<div id="outline-container-org3f3905c" class="outline-2">
-<h2 id="org3f3905c"><span class="section-number-2">1</span> Maj 2017.</h2>
+<div id="outline-container-org3b2c157" class="outline-2">
+<h2 id="org3b2c157"><span class="section-number-2">1</span> Maj 2017.</h2>
 <div class="outline-text-2" id="text-1">
-</div><div id="outline-container-orgfc776b8" class="outline-3">
-<h3 id="orgfc776b8"><span class="section-number-3">1.1</span> <i>Carimbo</i></h3>
+</div><div id="outline-container-org63640f9" class="outline-3">
+<h3 id="org63640f9"><span class="section-number-3">1.1</span> <i>Carimbo</i></h3>
 <div class="outline-text-3" id="text-1-1">
-</div><div id="outline-container-org7053112" class="outline-4">
-<h4 id="org7053112"><span class="section-number-4">1.1.1</span> Šta su blokovi u Pharo-u? Dajte jedan primer bloka.</h4>
+</div><div id="outline-container-orge84ecdd" class="outline-4">
+<h4 id="orge84ecdd"><span class="section-number-4">1.1.1</span> Šta su blokovi u Pharo-u? Dajte jedan primer bloka.</h4>
 <div class="outline-text-4" id="text-1-1-1">
 <p>
 Blokovi su anonimne metode, leksički zatvarači
@@ -290,8 +290,8 @@ Blokovi su anonimne metode, leksički zatvarači
 </div>
 </div>
 
-<div id="outline-container-org1007e20" class="outline-4">
-<h4 id="org1007e20"><span class="section-number-4">1.1.2</span> Da li je kompozicija poruka u Pharo-u desno asocijativna? Dati jedan primer.</h4>
+<div id="outline-container-orge27a877" class="outline-4">
+<h4 id="orge27a877"><span class="section-number-4">1.1.2</span> Da li je kompozicija poruka u Pharo-u desno asocijativna? Dati jedan primer.</h4>
 <div class="outline-text-4" id="text-1-1-2">
 <p>
 Nisu.
@@ -304,8 +304,8 @@ Nisu.
 </div>
 </div>
 
-<div id="outline-container-org7d50c77" class="outline-4">
-<h4 id="org7d50c77"><span class="section-number-4">1.1.3</span> Napište kod koji učitava sliku sa desktopa u Morph prozor (<i>window</i>).</h4>
+<div id="outline-container-org564451a" class="outline-4">
+<h4 id="org564451a"><span class="section-number-4">1.1.3</span> Napište kod koji učitava sliku sa desktopa u Morph prozor (<i>window</i>).</h4>
 <div class="outline-text-4" id="text-1-1-3">
 <div class="org-src-container">
 <pre class="src src-python">(ImageReadWriter formFromFileNamed: <span style="color: #CC9393;">'/home/novak/Desktop/nb.jpg'</span>) asMorph openIn<span style="color: #DC8CC3; background-color: #3F3F3F;">Window</span>
@@ -314,8 +314,8 @@ Nisu.
 </div>
 </div>
 
-<div id="outline-container-orgded1c52" class="outline-4">
-<h4 id="orgded1c52"><span class="section-number-4">1.1.4</span> Napisati kod koji u nizu (<i>array</i>) pronalazi parne brojeve i štampa ih u Transkript, svaki u novi red.</h4>
+<div id="outline-container-orgc4f794f" class="outline-4">
+<h4 id="orgc4f794f"><span class="section-number-4">1.1.4</span> Napisati kod koji u nizu (<i>array</i>) pronalazi parne brojeve i štampa ih u Transkript, svaki u novi red.</h4>
 <div class="outline-text-4" id="text-1-1-4">
 <div class="org-src-container">
 <pre class="src src-python"><span style="color: #5F7F5F;">#</span><span style="color: #7F9F7F;">(9 8 4 9 6 7) &lt;vas_kod&gt;</span>
@@ -335,11 +335,11 @@ Nisu.
 </div>
 </div>
 
-<div id="outline-container-org86069d0" class="outline-3">
-<h3 id="org86069d0"><span class="section-number-3">1.2</span> <i>Sabar</i></h3>
+<div id="outline-container-orge8dfa17" class="outline-3">
+<h3 id="orge8dfa17"><span class="section-number-3">1.2</span> <i>Sabar</i></h3>
 <div class="outline-text-3" id="text-1-2">
-</div><div id="outline-container-org2b28654" class="outline-4">
-<h4 id="org2b28654"><span class="section-number-4">1.2.1</span> Šta su metode a šta poruke u Smalltalku? Kako se vrši kreiranje objekata? Dati jedan primer.</h4>
+</div><div id="outline-container-orgfdb72ae" class="outline-4">
+<h4 id="orgfdb72ae"><span class="section-number-4">1.2.1</span> Šta su metode a šta poruke u Smalltalku? Kako se vrši kreiranje objekata? Dati jedan primer.</h4>
 <div class="outline-text-4" id="text-1-2-1">
 <p>
 Metode su deo klase i opisuju kako se radi nešto što klasa
@@ -354,8 +354,8 @@ slanjem poruke <code>new</code>.
 </div>
 </div>
 
-<div id="outline-container-org265f2fc" class="outline-4">
-<h4 id="org265f2fc"><span class="section-number-4">1.2.2</span> Šta je kaskada (<i>cascade</i>) u Pharo-u? Dati jedan primer.</h4>
+<div id="outline-container-orga0f3292" class="outline-4">
+<h4 id="orga0f3292"><span class="section-number-4">1.2.2</span> Šta je kaskada (<i>cascade</i>) u Pharo-u? Dati jedan primer.</h4>
 <div class="outline-text-4" id="text-1-2-2">
 <p>
 Kaskada je mehanizam za slanje više poruka jednom objektu.
@@ -369,8 +369,8 @@ coll add:<span style="color: #CC9393;">'one'</span>; add:<span style="color: #CC
 </div>
 </div>
 
-<div id="outline-container-org4a524e0" class="outline-4">
-<h4 id="org4a524e0"><span class="section-number-4">1.2.3</span> Napisati Pharo blok koji prima putanju do slike sa lokalnog sistema i otvara tu sliku u svetu(<i>world</i>).</h4>
+<div id="outline-container-orgc6c867d" class="outline-4">
+<h4 id="orgc6c867d"><span class="section-number-4">1.2.3</span> Napisati Pharo blok koji prima putanju do slike sa lokalnog sistema i otvara tu sliku u svetu(<i>world</i>).</h4>
 <div class="outline-text-4" id="text-1-2-3">
 <div class="org-src-container">
 <pre class="src src-python">[ &lt;ovaj_blok_treba_napisati&gt; ] &lt;odgovarajuca_poruka&gt;: <span style="color: #CC9393;">'/home/user/Desktop/ostata</span><span style="color: #DC8CC3; background-color: #3F3F3F;">k_putanje'</span>
@@ -384,8 +384,8 @@ coll add:<span style="color: #CC9393;">'one'</span>; add:<span style="color: #CC
 </div>
 </div>
 
-<div id="outline-container-orge65db38" class="outline-4">
-<h4 id="orge65db38"><span class="section-number-4">1.2.4</span> Napisati kod koji:</h4>
+<div id="outline-container-orga6bd62f" class="outline-4">
+<h4 id="orga6bd62f"><span class="section-number-4">1.2.4</span> Napisati kod koji:</h4>
 <div class="outline-text-4" id="text-1-2-4">
 <ul class="org-ul">
 <li>iz niza izbacuje brojeve koji su od trojke udaljeni za više od 5</li>
@@ -417,7 +417,7 @@ Ostao je 3
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: Novak Boškov</p>
-<p class="date">Created: 2017-06-19 пон 12:17</p>
+<p class="date">Created: 2017-06-19 пон 14:03</p>
 <p class="validation"></p>
 </div>
 </body>
